# misa-wbc

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: formulation_bench.rs  ipm_vs_active_set_scaling.rs  panda_bench.rs  qp_warm_bench.rs
examples/models/: README.md
src/: affine.rs  dynamics.rs  ho_qp.rs  lib.rs  qp.rs  refgen.rs  solve.rs  stack.rs  task.rs  tasks.rs
tests/: affine_wbc.rs  formulations.rs  opensot_style.rs  wbc_stack.rs
